обучение/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: servic-ingress-my-app
spec:
  type: ClusterIP
  ports:
    - name: my-app-port
      port: 80
      protocol: TCP
  selector:
    app.my-kub: app.conv
