обучение/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: my-nginx.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servic-ingress-my-app
            port:
              number: 80
